# car_control_stable

./: .gitignore  README.md
configs/: control.json  control_profiles.json  hardware.json  input.json  network.json  safety.json
core_cpp/: CMakeLists.txt  build.ps1
core_cpp/src/: app_config.cpp  app_config.h  car_controller.cpp  car_controller.h  damiao_motor_client.cpp  damiao_motor_client.h  drive_smoothing.cpp  drive_smoothing.h  input_filter.cpp  input_filter.h  input_source.cpp  input_source.h  main.cpp  mock_motor_client.cpp  mock_motor_client.h  motor_client.h  safety_manager.cpp  safety_manager.h  telemetry.cpp  telemetry.h  types.h
docs/: ARCHITECTURE.md  DELIVERY.md  EXPANSION_GUIDE.md  FIELD_CHECKLIST.md  IMPLEMENTATION_PLAN.md  USAGE_TUTORIAL.md  交付说明.md  使用教程.md  实现计划.md  控制方式说明.md
frontend/: index.html
scripts/: build_board.sh  calibrate_hardware.sh  calibrate_mock.ps1  check_and_start.ps1  check_and_start.sh  package_release.ps1  run_api.ps1  run_api.sh  run_hardware.sh  run_mock.ps1  run_mock.sh  send_remote_demo.ps1  send_remote_demo.sh  start_car.sh
tools_python/: config_check.py  remote_control_sender.py  telemetry_api.py
